--- a/frequencia/templates/registration/login.html
+++ b/frequencia/templates/registration/login.html
@@ -6,7 +6,7 @@
 {% block main %}
 
 
-
+<div style="margin: 10% auto; text-align:center">
         <h1>Loginzera do controle</h1>
 
 
@@ -18,5 +18,5 @@
             </form>
                 <br>
 
-
+</div>
 {% endblock %}
