--- a/frequencia/templates/registration/login.html
+++ b/frequencia/templates/registration/login.html
@@ -7,7 +7,7 @@
 
 
 <div style="margin: 10% auto; text-align:center;">
-        <h1>Loginzera do controle0
+        <h1>Loginzera do controle
         </h1>
 
 
