--- a/frequencia/templates/registration/login.html
+++ b/frequencia/templates/registration/login.html
@@ -1,23 +1,20 @@
+
 {% extends 'registration/base.html' %}
 
 {% block title %} Página de Login {% endblock %}
 
 
+
 {% block main %}
-
-
-
-        <h1>Loginzera do controle0
-        </h1>
-
-
-            <form method="POST">
+<body class="text-center">
+    <form class="form-signin">
+        <h1>Loginzera do controle</h1>
+            <form class="md4" method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
                 <button type="submit" class="btn btn-dark">Login</button>
-
             </form>
-                <br>
-
-
+    </form>
+</div>
+</body>
 {% endblock %}
