--- a/frequencia/templates/frequencia/timer.html
+++ b/frequencia/templates/frequencia/timer.html
@@ -6,6 +6,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+      <link href={% static "vendor/bootstrap/css/bootstrap.min.css" %} rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  
+  <link href={% static "css/blog-home.css" %} rel="stylesheet">
     <title>Teste</title>
 
 </head>
@@ -23,12 +28,25 @@
  }
  function initTimer() {
   // O metodo nativo setInterval executa uma determinada funcao em um determinado tempo  
-  setInterval(showTimer,1000);
+  setInterval(showTimer,0);
  }
 </script>
 <body onLoad="initTimer();">
 <br><br>
-<span id="timer"></span>
+
+
+      <div class="card text-center">
+        <div class="card-header">
+        Registrar Batida
+        </div>
+          <div class="card-body">
+              <span class="input-group-btn">
+                <h5 class="card-title" id="timer"></h5>
+                <button class="btn btn-secondary" type="button">Registrar ponto</button>
+              </span>
+            </div>
+          </div>
+        </div>
 </body>
 
 </html>
