--- a/frequencia/templates/frequencia/timer.html
+++ b/frequencia/templates/frequencia/timer.html
@@ -32,9 +32,21 @@
  }
 </script>
 <body onLoad="initTimer();">
-<br><br>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      {% if user.is_authenticated %} 
+      <a class="text-white">Olá {{ user.username }}!</a>
+      {% else %}
+      <a class="text-white" > Olá visitante!</a>
+      {% endif %}
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  </nav>
 
+    <div class="container">
 
+    <div class="row">
       <div class="card text-center">
         <div class="card-header">
         Registrar Batida
@@ -47,6 +59,10 @@
             </div>
           </div>
         </div>
-</body>
+    </div>
+     </div>
+
+     
+</body
 
 </html>
