Ajuste do model

--- a/frequencia/templates/frequencia/timer.html
+++ b/frequencia/templates/frequencia/timer.html
@@ -54,7 +54,10 @@
           <div class="card-body">
               <span class="input-group-btn">
                 <h5 class="card-title" id="timer"></h5>
-                <button class="btn btn-secondary" type="button">Registrar ponto</button>
+                <p>It is {% now "jS F Y H:i" %}</p>
+                <div class="form-group" method="post">
+                    <button class="btn btn-secondary" type="button" action="">Registrar ponto</button>
+                </div>
               </span>
             </div>
           </div>
