tirei email e nome de funcionario pq era desnecessario

--- a/frequencia/templates/frequencia/chefe.html
+++ b/frequencia/templates/frequencia/chefe.html
@@ -3,6 +3,6 @@ Chefe: {{ chefe }}<br>
 Subordinados: 
 {% for subordinado in subordinados %}
 
-        {{ subordinado }}, 
+        {{ subordinado }}
 
 {% endfor %}
